# realGA

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENSE  Makefile  README.md  bench_results.txt  build_swig.md  build_swig.sh  minify.sh
benchmarks/: benchmark_fake.cpp  benchmark_flatsurface.cpp  benchmark_foxholes.cpp  benchmark_rosenbrock.cpp  benchmark_shpere.cpp  benchmarks.cpp  benchmarks.h
doc/: out.example
docs/: index.md
examples/: codingame.cpp  debug.cpp  debug.py  mnist.cpp  multithread.cpp  profile.cpp  quadratic.cpp  readme.cpp
examples/python/: debug.py  mnist.py
include/: algorithms.h  chromosome.h  crossover.h  fitnessfunction.h  messages.h  mutation.h  options.h  realchromosome.h  realga.h  realga_mt.h  realgen.h  realgen_mt.h  realgenmultithread.h  realgenoptions.h  realgenotype.h  selection.h  stat.h
minify/: experiments.py  minify.py  realga_lib_minified.h  test_realga_minified.cpp
python_test/: roulette_wheel.py  roulette_wheel_max.py
src/: algorithms.cpp  chromosome.cpp  crossover_fixed.cpp  crossover_linear.cpp  crossover_uniform.cpp  fitnessfunction.cpp  mutation.cpp  mutation_gaussian.cpp  mutation_uniform.cpp  options.cpp  realchromosome.cpp  realga.cpp  realga_mt.cpp  realgen.cpp  realgen_mt.cpp  realgenmultithread.cpp  realgenoptions.cpp  realgenotype.cpp  roulettewheelselection.cpp  selection.cpp  selection_roulette.cpp  selection_tournament.cpp  stat.cpp  tournamentselection.cpp  uniform_crossover.cpp
swig/: realga.i  setup.py
test/: bench1_sphere.cpp  bench2_rosenbrock.cpp  bench3_flatsurface.cpp  bench5_foxholes.cpp  benchmark_test.cpp  flatsurface_test.cpp  foxholes_test.cpp  main.cpp  main.out  realgen_test.cpp  realgenotypetest.cpp  rosenbrock_test.cpp  selection_test.cpp  sphere_test.cpp  stat_test.cpp  stattest.cpp  test_real_rosenbrock.cpp  test_real_sphere.cpp  testcommon.cpp  testcommon.h  testrealgen.cpp
tests/: test_algorithms.cpp  test_chromosome.cpp  test_selection.cpp  test_stat.cpp  testcommon.cpp  testcommon.h  tests.cpp
